--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bootstrap-multiselect",
+  "name": "multiselect",
   "version": "0.9.13",
   "description": "JQuery multiselect plugin based on Twitter Bootstrap.",
   "main": "dist/js/bootstrap-multiselect.js",
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/davidstutz/bootstrap-multiselect"
+    "url": "https://github.com/jonas-franke/bootstrap-multiselect"
   },
   "keywords": [
     "js",
